/* General Appboy Alarm Messages */
"Appboy.alert.ok-button.title" = "OK";
/* Feedback No Connection Messages */
"Appboy.feedback.no-connection.title" = "Cannot establish network connection.";
"Appboy.feedback.no-connection.message" = "Please try again later.";
/* Feedback Alert Invalid Email Messages */
"Appboy.feedback.alert.invalid-email.title" = "Invalid Email Address";
"Appboy.feedback.alert.invalid-email.message" = "Please enter a valid email address and try again.";
/* Feedback Alert Empty Feedback Labels */
"Appboy.feedback.alert.empty-feedback.title" = "Empty Feedback Message";
"Appboy.feedback.alert.empty-feedback.message" = "Please enter a feedback message.";
/* Feedback Context Labels */
"Appboy.feedback.modal-context.title" = "Feedback";
"Appboy.feedback.cancel-button.title" = "Cancel";
"Appboy.feedback.send-button.title" = "Send";
"Appboy.feedback.label.message" = "Message";
"Appboy.feedback.label.report-issue" = "Reporting an Issue?";
"Appboy.feedback.email-text-field-place-hold" = "Email";