<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="5XG-rG-JEn">
    <device id="retina4_7" orientation="portrait">
        <adaptation id="fullscreen"/>
    </device>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ufr-Ie-K2I">
                                <rect key="frame" x="16" y="148" width="144" height="30"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <state key="normal" title="Navigation Feedback"/>
                                <connections>
                                    <segue destination="qm8-ym-VbC" kind="show" id="tBm-bp-jHP"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vPL-lc-8UT">
                                <rect key="frame" x="16" y="72" width="114" height="30"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <state key="normal" title="Modal Feedback"/>
                                <connections>
                                    <segue destination="AUQ-OD-nmu" kind="presentation" id="YCs-ag-FoW"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TUC-Wv-g3H">
                                <rect key="frame" x="16" y="222" width="125" height="30"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <state key="normal" title="Custom Feedback"/>
                                <connections>
                                    <segue destination="rRg-vx-xsr" kind="presentation" id="Nem-Py-Vb8"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                    </view>
                    <navigationItem key="navigationItem" id="gpq-8n-7Oz"/>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
        </scene>
        <!--Custom Appboy Feedback View Controller-->
        <scene sceneID="mcc-gO-Gaa">
            <objects>
                <viewController id="rRg-vx-xsr" customClass="CustomAppboyFeedbackViewController" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="D15-9a-SXp"/>
                        <viewControllerLayoutGuide type="bottom" id="IUF-qC-3S6"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="jhf-CX-A1q">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                    </view>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="kqB-Fl-PXc" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1047" y="755"/>
        </scene>
        <!--Navigation Feedback View Controller-->
        <scene sceneID="L5H-v6-6uY">
            <objects>
                <viewController id="qm8-ym-VbC" customClass="ABKNavigationFeedbackViewController" sceneMemberID="viewController">
                    <button key="view" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="gFs-Tx-OO0">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                        <state key="normal" title="Button"/>
                    </button>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="tvi-Qo-Amx" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1753" y="111"/>
        </scene>
        <!--Modal Feedback View Controller-->
        <scene sceneID="PyY-x5-IZJ">
            <objects>
                <viewController id="AUQ-OD-nmu" customClass="ABKModalFeedbackViewController" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="ASf-b4-LKn"/>
                        <viewControllerLayoutGuide type="bottom" id="cYB-wZ-Bkb"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="sWo-BE-wnH">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                    </view>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="wta-Zf-ffa" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="970" y="-260"/>
        </scene>
        <!--Navigation Controller-->
        <scene sceneID="dB7-53-qJp">
            <objects>
                <navigationController id="5XG-rG-JEn" sceneMemberID="viewController">
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="tUB-gt-hh8">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <connections>
                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="kKQ-nD-JC9"/>
                    </connections>
                </navigationController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="Tfm-U7-MQz" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-815" y="37"/>
        </scene>
    </scenes>
</document>
