...
                            <color key="textColor" red="0.3294117647" green="0.3294117647" blue="0.3294117647" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                            <nil key="highlightedColor"/>
                        </label>
                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageWhenHighlighted="NO" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5nB-vM-HWf">
                            <rect key="frame" x="211" y="5" width="25" height="26"/>
                            <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                            <accessibility key="accessibilityConfiguration" label="feedback issue button"/>
                            <constraints>
                                <constraint firstAttribute="height" constant="26" id="Uh1-NB-Heh"/>
                                <constraint firstAttribute="width" constant="25" id="evO-IE-q0G"/>
                            </constraints>
                            <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                            <state key="normal" backgroundImage="checkmark-bg.png">
...
