...
                        <subviews>
                            <navigationBar contentMode="scaleToFill" id="10r-xe-yVx">
                                <rect key="frame" x="0.0" y="0.0" width="768" height="44"/>
                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                <items>
                                    <navigationItem title="Title" id="van-cc-Dr9">
                                        <barButtonItem key="leftBarButtonItem" title="Back" id="BhA-vM-It1">
                                            <connections>
                                                <action selector="backButtonTapped:" destination="aHX-n1-1kw" id="oSl-es-NfD"/>
                                            </connections>
                                        </barButtonItem>
                                        <barButtonItem key="rightBarButtonItem" title="Done" id="t5o-uA-UpD">
                                            <connections>
...
